# AERSP424

./: .gitignore  README.md
CreatingLibrary/: CMakeLists.txt  code.h
HelloWorld/: CMakeCache.txt  CMakeLists.txt
Homework 1/: .gitignore  CMakeLists.txt  FlightMap.cpp  FlightMap.h  Pilot.cpp  Pilot.h  Pilot_ModCPP.cpp  Pilot_ModCPP.h  Plane.cpp  Plane.h  Plane_ModCPP.cpp  Plane_ModCPP.h  main.cpp  makePlane.cpp  makePlane.h
Homework 2/: ATC.cpp  ATC.h  Accelerometer.h  AerospaceControlSystem.h  CMakeLists.txt  PidoSensor.h  Pilot.cpp  Pilot.h  PressureSensor.h  Q1.cpp  Q1.h  Q2.cpp  Q2.h  Q3.cpp  Q3.h  Q4.cpp  Q4.h  README.md  Robot.cpp  SensorFactory.h  SensorTypes.h  main.cpp
Homework 2/src/: ATC.cpp  ATC.h  Accelerometer.h  AerospaceControlSystem.h  PidoSensor.h  Pilot.cpp  Pilot.h  PressureSensor.h  Q1.cpp  Q1.h  Q2.cpp  Q2.h  Q3.cpp  Q3.h  Q4.cpp  Q4.h  Robot.cpp  Robot.h  Sensor.h  SensorFactory.h  main.cpp
Note 1_25/: CMakeLists.txt  main.cpp
Note 1_30/: CMakeLists.txt  main.cpp
Note 2_1/: CMakeLists.txt  main.cpp
Note 2_12/: CMakeLists.txt  Plane.cpp  Plane.h  main.cpp
Note 2_6/: CMakeLists.txt  Plane.cpp  main.cpp
Note 2_8/: CMakeLists.txt  Plane.cpp  Plane.h  main.cpp
Note 3_12/: CMakeLists.txt  main.cpp  participation_3_12.cpp
Note 3_14/: CMakeLists.txt  main.cpp
Note 3_21/: CMakeLists.txt  main.cpp
Note 4_2/: CMakeLists.txt  main.cpp
Note 4_4/: CMakeLists.txt  main.cpp
OpenGL/: main.cpp
ProjectUsingSharedLibrary/: CMakeLists.txt  main.cpp  shared_lib_example.lib
SharedLibrary/: CMakeLists.txt  code.cpp
